--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
 
       - run: npm install
 
-      - run: npm run build
+      - run: sh run.sh
 
       # Commit all changed files back to the repository
       - uses: stefanzweifel/git-auto-commit-action@v5
